samples/_failures_safe/1761171977_9188ab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a5d2b578.c: In function ‘print_errors’:
./samples/SAFE/__tmp_a5d2b578.c:124:20: error: missing terminating " character
  124 |             printf("[
      |                    ^~
./samples/SAFE/__tmp_a5d2b578.c:124:13: error: expected expression at end of input
  124 |             printf("[
      |             ^~~~~~
./samples/SAFE/__tmp_a5d2b578.c:124:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a5d2b578.c:124:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a5d2b578.c:124:13: error: expected declaration or statement at end of input
